--- a/Amazerific/index.html
+++ b/Amazerific/index.html
@@ -23,7 +23,7 @@
         <ul>
             <li>It fit's your lifestyle</li>
             <li>It's awesome</li>
-            <li>IT rocks your world</li>
+            <li>It rocks your world</li>
         </ul>
         
         <img src="lightbulb.png" alt="an image of a lightbulb">
