--- a/Amazerific/index.html
+++ b/Amazerific/index.html
@@ -9,7 +9,7 @@
   <body>
     <header>
         <div class="container">
-            <h1>Amazeriffic</h1>
+          <h1>Amazeriffic</h1>
             <nav>
                 <a href="#">Sign Up!</a> |
                 <a href="#">FAQ</a>  |
@@ -20,6 +20,7 @@
       
     <main>
         <div class="container">
+          <div class="mainLeft">
             <h2>Amzerific will change your life!</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
              eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
@@ -30,8 +31,10 @@
                 <li>It's awesome</li>
                 <li>It rocks your world</li>
             </ul>
-
+          </div>
+          <div class="mainRight">
             <img src="lightbulb.png" alt="an image of a lightbulb">
+          </div>
         </div>
     </main>
       
